<resources>
    <string name="app_name">Qolk</string>
    <string name="title_add">新規追加</string>

    <!-- Add -->
    <string name="label_device">デバイスID</string>
    <string name="label_bottle_name">ボトルの名前</string>
    <string name="label_bottle_image">ボトルの写真</string>
    <string name="btn_add">登録する</string>

    <!-- Details -->
    <string name="label_details">詳細情報</string>
    <string name="label_advise">アドバイス</string>
    <string name="label_date">登録日</string>
    <string name="label_alcohol">アルコール度数</string>
    <string name="label_humidity">湿度</string>
    <string name="label_temperature">温度</string>
    <string name="common_percentage">%d%%</string>

</resources>
