<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/AppTheme.Display"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/AppTheme.TextView.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_device"/>

    <EditText
        android:id="@+id/add_edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_spacing_large"
        android:layout_marginRight="@dimen/element_spacing_large"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:background="@drawable/bg_white_frame"
        android:inputType="text"
        android:minHeight="@dimen/view_size_small"
        android:textColor="@color/primary_text_inverse"/>

    <TextView
        style="@style/AppTheme.TextView.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing_xlarge"
        android:text="@string/label_bottle_name"/>

    <EditText
        android:id="@+id/add_edit_bottle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_spacing_large"
        android:layout_marginRight="@dimen/element_spacing_large"
        android:layout_marginTop="@dimen/element_spacing_normal"
        android:background="@drawable/bg_white_frame"
        android:inputType="text"
        android:minHeight="@dimen/view_size_small"
        android:textColor="@color/primary_text_inverse"/>

    <TextView
        style="@style/AppTheme.TextView.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing_xlarge"
        android:text="@string/label_bottle_image"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/element_spacing_large">

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white_frame"
            android:padding="@dimen/element_spacing_tiny"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_add_noimg"/>

        <ImageButton
            android:id="@+id/add_image_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/element_spacing_tiny"
            android:scaleType="center"
            android:src="@mipmap/img_add_shutter"/>

    </FrameLayout>

    <Button
        android:id="@+id/add_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_normal"
        android:background="@drawable/btn_accent_sub"
        android:text="@string/btn_add"
        android:textColor="@color/primary_text_inverse"
        android:textSize="@dimen/text_size_large"/>

</LinearLayout>